# m64tools

./: Cargo.toml  README.md
aiff/: Cargo.toml
aiff/src/: chunks.rs  error.rs  lib.rs  types.rs
aiff/src/chunks/: comm.rs  inst.rs  mark.rs  ssnd.rs
aiffplay/: Cargo.toml
aiffplay/src/: main.rs
m64/: Cargo.toml
m64/src/: channel.rs  layer.rs  lib.rs  sequence.rs  state.rs
m64play/: Cargo.toml
m64play-cli/: Cargo.toml
m64play-cli/src/: main.rs
m64play/src/: lib.rs  main.rs  player.rs  sequence.rs  sound_bank.rs  state.rs
m64play/src/state/: channel.rs  layer.rs  player.rs
src/: main.rs
