[package]
name = "m64play"
version = "0.1.0"
authors = ["Delta-Psi <delta.psi00@gmail.com>"]
edition = "2018"

[dependencies]
m64 = { path = "../m64" }
cpal = "0.13.1"

cursive = "0.15.0"
#nfd2 = "0.2.3"
#directories = "3.0.1"

#toml = "0.5.6"
serde_json = "1.0"
#serde = { version = "1.0", features = ["derive"] }
